--- a/淘宝静态页面.html
+++ b/淘宝静态页面.html
@@ -8,11 +8,36 @@
     <link rel="stylesheet" href="./淘宝静态页面.css">
 </head>
 
-    
+
 
 <body>
 
-    
+    <!-- 头部信息 -->
+    <div id="head-message">
+
+    </div>
+
+    <!-- 头部广告 -->
+    <div id="head-ad"></div>
+
+    <!-- 头部搜索 -->
+    <div id="head-search"></div>
+
+    <!-- 首屏内容 -->
+    <div id="first-screen"></div>
+
+    <!-- 有好货 与 爱逛街 板块 -->
+    <div id="second-screen">
+
+    </div>
+
+    <!-- 右侧固定定位导航 -->
+    <div id="right-fixed-nav">
+
+    </div>
+
+
+
 
 
 
