--- a/淘宝静态页面.html
+++ b/淘宝静态页面.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./淘宝静态页面.css">
+    <title>淘宝网 - 淘！我喜欢</title>
+    <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="./css/淘宝静态页面.css">
+    <base href="">
 </head>
 
 
@@ -13,8 +15,55 @@
 <body>
 
     <!-- 头部信息 -->
-    <div id="head-message">
-
+    <div id="head-message" class="clear-float">
+        <ul class="fl">
+            <li>
+                <span>中国大陆</span>
+                <span></span>
+            </li>
+            <li>
+                <a href="#">亲,请登录</a>
+            </li>
+            <li>
+                <a href="#">免费注册</a>
+            </li>
+            <li>
+                <a href="#">手机逛淘宝</a>
+            </li>
+        </ul>
+        <ul class="fr">
+            <li>
+                <a href="#">我的淘宝</a>
+                <span></span>
+            </li>
+            <li>
+                <span></span>
+                <a href="#">购物车</a>
+                <strong>0</strong>
+                <span></span>
+            </li>
+            <li>
+                <a href="#"><span></span>收藏夹</a>
+                <span></span>
+            </li>
+            <li>
+                <a href="#">商品链接</a>
+            </li>
+            <li>|</li>
+            <li>
+                <a href="#">卖家中心</a>
+                <span></span>
+            </li>
+            <li>
+                <a href="#">联系客服</a>
+                <span></span>
+            </li>
+            <li>
+                <span></span>
+                <a href="#">网站导航</a>
+                <span></span>
+            </li>
+        </ul>
     </div>
 
     <!-- 头部广告 -->
