头部信息样式end

--- a/淘宝静态页面.html
+++ b/淘宝静态页面.html
@@ -19,12 +19,10 @@
         <ul class="fl">
             <li>
                 <span>中国大陆</span>
-                <span></span>
+                <span class="iconfont arrow">&#xe733</span>
             </li>
-            <li>
-                <a href="#">亲,请登录</a>
-            </li>
-            <li>
+            <li class="mr-7">
+                <a href="#" class="login mr-7">亲,请登录</a>
                 <a href="#">免费注册</a>
             </li>
             <li>
@@ -34,34 +32,37 @@
         <ul class="fr">
             <li>
                 <a href="#">我的淘宝</a>
-                <span></span>
+                <span class="iconfont arrow">&#xe733</span>
             </li>
             <li>
-                <span></span>
+                <span class="iconfont mr-5 c4">&#xe63a</span>
                 <a href="#">购物车</a>
                 <strong>0</strong>
-                <span></span>
+                <span class="iconfont arrow">&#xe733</span>
             </li>
             <li>
-                <a href="#"><span></span>收藏夹</a>
-                <span></span>
+                <a href="#">
+                    <span class="iconfont mr-5 c9c">&#x3432</span>
+                    <span>收藏夹</span>
+                </a>
+                <span class="iconfont arrow">&#xe733</span>
             </li>
             <li>
                 <a href="#">商品链接</a>
             </li>
-            <li>|</li>
+            <li class="line">|</li>
             <li>
-                <a href="#">卖家中心</a>
-                <span></span>
+                <a href="#">千牛卖家中心</a>
+                <span class="iconfont arrow">&#xe733</span>
             </li>
             <li>
                 <a href="#">联系客服</a>
-                <span></span>
+                <span class="iconfont arrow">&#xe733</span>
             </li>
             <li>
-                <span></span>
+                <span class="iconfont mr-5 c4">&#xe66d</span>
                 <a href="#">网站导航</a>
-                <span></span>
+                <span class="iconfont arrow">&#xe733</span>
             </li>
         </ul>
     </div>
