--- a/淘宝静态页面.html
+++ b/淘宝静态页面.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>淘宝网 - 淘！我喜欢</title>
     <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./css/淘宝静态页面.css">
+    <link rel="stylesheet" href="./css/muster.css">
     <base href="">
 </head>
 
@@ -15,7 +15,7 @@
 <body>
 
     <!-- 头部信息 -->
-    <div id="head-message" class="clear-float">
+    <div id="head-message" class="clear-float layer">
         <ul class="fl">
             <li>
                 <span>中国大陆</span>
@@ -68,7 +68,44 @@
     </div>
 
     <!-- 头部广告 -->
-    <div id="head-ad"></div>
+    <div id="head-ad">
+        <div class="clear-float layer">
+            <a href="#" class="fl go">
+                <img src="./images/go.png" alt="">
+            </a>
+            <ul class="fl">
+                <li class="item-1">
+                    <a href="#" class="fr"><img src="./images/adimg_01.jpg" alt=""></a>
+                    <h3><a href="#">电视会场</a></h3>
+                    <p><a href="#">最高降2000</a></p>
+                </li>
+                <li class="item-2">
+                    <a href="#" class="fr"><img src="./images/adimg_02.jpg" alt=""></a>
+                    <h3><a href="#">电视会场</a></h3>
+                    <p><a href="#">最高降2000</a></p>
+                </li>
+                <li class="item-3">
+                    <a href="#" class="fr"><img src="./images/adimg_03.jpg" alt=""></a>
+                    <h3><a href="#">电视会场</a></h3>
+                    <p><a href="#">最高降2000</a></p>
+                </li>
+                <li class="item-4">
+                    <a href="#" class="fr"><img src="./images/adimg_04.jpg" alt=""></a>
+                    <h3><a href="#">电视会场</a></h3>
+                    <p><a href="#">最高降2000</a></p>
+                </li>
+                <li class="item-5">
+                    <a href="#" class="fr"><img src="./images/adimg_05.jpg" alt=""></a>
+                    <h3><a href="#">电视会场</a></h3>
+                    <p><a href="#">最高降2000</a></p>
+                </li>
+
+
+            </ul>
+
+        </div>
+
+    </div>
 
     <!-- 头部搜索 -->
     <div id="head-search"></div>
