搜索框整行

--- a/淘宝静态页面.html
+++ b/淘宝静态页面.html
@@ -15,14 +15,14 @@
 <body>
 
     <!-- 头部信息 -->
-    <div id="head-message" class="clear-float layer">
+    <div id="head-message" class="clearfix layer">
         <ul class="fl">
             <li>
                 <span>中国大陆</span>
                 <span class="iconfont arrow">&#xe733</span>
             </li>
             <li class="mr-7">
-                <a href="#" class="login mr-7">亲,请登录</a>
+                <a href="#" class="login mr-7">亲，请登录</a>
                 <a href="#">免费注册</a>
             </li>
             <li>
@@ -69,7 +69,7 @@
 
     <!-- 头部广告 -->
     <div id="head-ad">
-        <div class="clear-float layer">
+        <div class="clearfix layer">
             <a href="#" class="fl go">
                 <img src="./images/go.png" alt="">
             </a>
@@ -81,23 +81,23 @@
                 </li>
                 <li class="item-2">
                     <a href="#" class="fr"><img src="./images/adimg_02.jpg" alt=""></a>
-                    <h3><a href="#">电视会场</a></h3>
-                    <p><a href="#">最高降2000</a></p>
+                    <h3><a href="#">厨房电器</a></h3>
+                    <p><a href="#">抢大额券</a></p>
                 </li>
                 <li class="item-3">
                     <a href="#" class="fr"><img src="./images/adimg_03.jpg" alt=""></a>
-                    <h3><a href="#">电视会场</a></h3>
-                    <p><a href="#">最高降2000</a></p>
+                    <h3><a href="#">超值囤货</a></h3>
+                    <p><a href="#">1元抢百元券</a></p>
                 </li>
                 <li class="item-4">
                     <a href="#" class="fr"><img src="./images/adimg_04.jpg" alt=""></a>
-                    <h3><a href="#">电视会场</a></h3>
-                    <p><a href="#">最高降2000</a></p>
+                    <h3><a href="#">全球冰洗</a></h3>
+                    <p><a href="#">三门冰箱888</a></p>
                 </li>
                 <li class="item-5">
                     <a href="#" class="fr"><img src="./images/adimg_05.jpg" alt=""></a>
-                    <h3><a href="#">电视会场</a></h3>
-                    <p><a href="#">最高降2000</a></p>
+                    <h3><a href="#">潮酷数码</a></h3>
+                    <p><a href="#">大牌爆款直降</a></p>
                 </li>
 
 
@@ -108,7 +108,56 @@
     </div>
 
     <!-- 头部搜索 -->
-    <div id="head-search"></div>
+    <div id="head-search">
+        <div class="clearfix layer">
+            <h1 class="fl"><a href="#">淘宝网</a></h1>
+            <div class="code fr">
+                <span class="iconfont close">&#xe614</span>
+                <span class="c5 mtb">去领红包</span>
+                <img src="./images/code.png" alt="">
+            </div>
+            <div class="search">
+                <ul class="search-tab clearfix">
+                    <li class="active">宝贝</li>
+                    <li>天猫</li>
+                    <li>店铺</li>
+                </ul>
+
+                <div class="search-content clearfix">
+                    <form action="#">
+                        <div class="search-box fl">
+                            <input type="text">
+                            <div class="placeholder">
+                                <i class="iconfont">&#xe615</i>
+                                <span>初冬外套</span>
+                            </div>
+                            <span class="iconfont camera"> &#xe6ba</span>
+                        </div>
+                        <div class="search-btn fl">
+                            <button type="submit">搜索</button>
+                        </div>
+                    </form>
+
+                </div>
+                <div class="hot-key">
+                    <a href="#">新款连衣裙</a>
+                    <a href="#">四件套</a>
+                    <a href="#" class="c5">潮流T恤</a>
+                    <a href="#">时尚女鞋</a>
+                    <a href="#">短裤</a>
+                    <a href="#">半身裙</a>
+                    <a href="#">男士外套</a>
+                    <a href="#">墙纸</a>
+                    <a href="#">行车记录仪</a>
+                    <a href="#">新款男鞋</a>
+                    <a href="#">耳机</a>
+                    <a href="#">时尚女包</a>
+                    <a href="#">沙发</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
     <!-- 首屏内容 -->
     <div id="first-screen"></div>
