6.导航栏及hover图标

--- a/淘宝静态页面.html
+++ b/淘宝静态页面.html
@@ -159,6 +159,26 @@
 
     </div>
 
+    <!-- 导航 -->
+    <div id="nav" class="nav-bg">
+        <div class="clearfix layer">
+            <h2 class="fl">主题市场</h2>
+            <ul class="fl">
+                <li class="large-size"><a href="#">天猫</a></li>
+                <li class="large-size"><a href="#">聚划算</a></li>
+                <li class="large-size"><a href="#">天猫超市</a></li>
+                <li class="line">|</li>
+                <li><a href="#">司法拍卖</a></li>
+                <li><a href="#">淘宝心选</a></li>
+                <li><a href="#">天天特卖</a></li>
+                <li class="line">|</li>
+                <li><a href="#">飞猪旅行</a></li>
+                <li><a href="#">智能生活</a></li>
+                <li><a href="#">苏宁易购</a></li>
+            </ul>
+        </div>
+    </div>
+
     <!-- 首屏内容 -->
     <div id="first-screen"></div>
 
