--- a/淘宝静态页面.html
+++ b/淘宝静态页面.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>淘宝网 - 淘！我喜欢</title>
-    <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/muster.css">
     <base href="">
 </head>
@@ -180,7 +180,42 @@
     </div>
 
     <!-- 首屏内容 -->
-    <div id="first-screen"></div>
+    <div id="first-screen" class="layer clearfix">
+        <!-- 左板块 -->
+        <div class="first-left fl">
+            <!-- 左侧导航 -->
+            <div class="left-nav fl">
+                <ul>
+                    <li><a href="#">女装 / 内衣 / 家居</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">女鞋 / 男鞋 / 箱包</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">母婴 / 童装 / 玩具</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">男装 / 运动户外</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">美妆 / 彩妆 / 个护</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">手机 / 数码 / 企业</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">大家电 / 生活电器</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">零食 / 生鲜 / 茶酒</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">厨具 / 收纳 / 清洁</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">家纺 / 家饰 / 鲜花</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">图书音像 / 文具</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">医药保健 / 进口</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">汽车 / 二手车 / 用品</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">房产 / 装修家具 / 建材</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">手表 / 眼镜 / 珠宝饰品</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">我是 / 凑数 / 的</a><span class="iconfont">&#xe50c</span></li>
+                </ul>
+            </div>
+            <!-- 轮播图 -->
+            <div class="banner1 fr"></div>
+            <div class="banner2 fr"></div>
+
+            <!-- 淘宝头条 -->
+            <div class="news fl"></div>
+        </div>
+        <!-- 右板块 -->
+        <div class="first-right fr">
+
+        </div>
+    </div>
 
     <!-- 有好货 与 爱逛街 板块 -->
     <div id="second-screen">
