--- a/淘宝静态页面.html
+++ b/淘宝静态页面.html
@@ -186,27 +186,48 @@
             <!-- 左侧导航 -->
             <div class="left-nav fl">
                 <ul>
-                    <li><a href="#">女装 / 内衣 / 家居</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">女鞋 / 男鞋 / 箱包</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">母婴 / 童装 / 玩具</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">男装 / 运动户外</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">美妆 / 彩妆 / 个护</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">手机 / 数码 / 企业</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">大家电 / 生活电器</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">零食 / 生鲜 / 茶酒</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">厨具 / 收纳 / 清洁</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">家纺 / 家饰 / 鲜花</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">图书音像 / 文具</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">医药保健 / 进口</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">汽车 / 二手车 / 用品</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">房产 / 装修家具 / 建材</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">手表 / 眼镜 / 珠宝饰品</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">我是 / 凑数 / 的</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">女装</a> / <a href="#">内衣</a> / <a href="#">家居</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">女鞋</a> / <a href="#">男鞋</a> / <a href="#">箱包</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">母婴</a> / <a href="#">童装</a> / <a href="#">玩具</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">男装</a> / <a href="#">运动户外</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">美妆</a> / <a href="#">彩妆</a> / <a href="#">个护</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">手机</a> / <a href="#">数码</a> / <a href="#">企业</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">大家电</a> / <a href="#">生活电器</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">零食</a> / <a href="#">生鲜</a> / <a href="#">茶酒</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">厨具</a> / <a href="#">收纳</a> / <a href="#">清洁</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">家纺</a> / <a href="#">家饰</a> / <a href="#">鲜花</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">图书音像</a> / <a href="#">文具</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">医药保健</a> / <a href="#">进口</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">汽车</a> / <a href="#">二手车</a> / <a href="#">用品</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">房产</a> / <a href="#">装修家具</a> / <a href="#">建材</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">手表</a> / <a href="#">眼镜</a> / <a href="#">珠宝饰品</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">我是</a> / <a href="#">凑数</a> / <a href="#">的</a><span class="iconfont">&#xe50c</span></li>
                 </ul>
             </div>
             <!-- 轮播图 -->
-            <div class="banner1 fr"></div>
-            <div class="banner2 fr"></div>
+            <div class="banner1 fr">
+                <div class="pic fl">
+                    <div class="img">
+                        <a href="#"><img src="./images/pic_01.jpg" alt=""></a>
+                    </div>
+                    <button class="iconfont l-btn">&#xe50c</button>
+                    <button class="iconfont r-btn">&#xe50a</button>
+
+                    <div class="circle">
+                        <span class="active"></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+                <div class="ad fr">
+                    <a href="#"><img src="./images/ad_02.jpg" alt=""></a>
+                </div>
+            </div>
+            <div class="banner2 fr">
+                2
+            </div>
 
             <!-- 淘宝头条 -->
             <div class="news fl"></div>
