轮播图2部分

--- a/淘宝静态页面.html
+++ b/淘宝静态页面.html
@@ -110,7 +110,7 @@
     <!-- 头部搜索 -->
     <div id="head-search">
         <div class="clearfix layer">
-            <h1 class="fl"><a href="#">淘宝网</a></h1>
+            <h1 class="fl"><a href="#" role="img">淘宝网</a></h1>
             <div class="code fr">
                 <span class="iconfont close">&#xe614</span>
                 <span class="c5 mtb">去领红包</span>
@@ -186,22 +186,34 @@
             <!-- 左侧导航 -->
             <div class="left-nav fl">
                 <ul>
-                    <li><a href="#">女装</a> / <a href="#">内衣</a> / <a href="#">家居</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">女鞋</a> / <a href="#">男鞋</a> / <a href="#">箱包</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">母婴</a> / <a href="#">童装</a> / <a href="#">玩具</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">女装</a> / <a href="#">内衣</a> / <a href="#">家居</a><span
+                            class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">女鞋</a> / <a href="#">男鞋</a> / <a href="#">箱包</a><span
+                            class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">母婴</a> / <a href="#">童装</a> / <a href="#">玩具</a><span
+                            class="iconfont">&#xe50c</span></li>
                     <li><a href="#">男装</a> / <a href="#">运动户外</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">美妆</a> / <a href="#">彩妆</a> / <a href="#">个护</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">手机</a> / <a href="#">数码</a> / <a href="#">企业</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">美妆</a> / <a href="#">彩妆</a> / <a href="#">个护</a><span
+                            class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">手机</a> / <a href="#">数码</a> / <a href="#">企业</a><span
+                            class="iconfont">&#xe50c</span></li>
                     <li><a href="#">大家电</a> / <a href="#">生活电器</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">零食</a> / <a href="#">生鲜</a> / <a href="#">茶酒</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">厨具</a> / <a href="#">收纳</a> / <a href="#">清洁</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">家纺</a> / <a href="#">家饰</a> / <a href="#">鲜花</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">零食</a> / <a href="#">生鲜</a> / <a href="#">茶酒</a><span
+                            class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">厨具</a> / <a href="#">收纳</a> / <a href="#">清洁</a><span
+                            class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">家纺</a> / <a href="#">家饰</a> / <a href="#">鲜花</a><span
+                            class="iconfont">&#xe50c</span></li>
                     <li><a href="#">图书音像</a> / <a href="#">文具</a><span class="iconfont">&#xe50c</span></li>
                     <li><a href="#">医药保健</a> / <a href="#">进口</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">汽车</a> / <a href="#">二手车</a> / <a href="#">用品</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">房产</a> / <a href="#">装修家具</a> / <a href="#">建材</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">手表</a> / <a href="#">眼镜</a> / <a href="#">珠宝饰品</a><span class="iconfont">&#xe50c</span></li>
-                    <li><a href="#">我是</a> / <a href="#">凑数</a> / <a href="#">的</a><span class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">汽车</a> / <a href="#">二手车</a> / <a href="#">用品</a><span
+                            class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">房产</a> / <a href="#">装修家具</a> / <a href="#">建材</a><span
+                            class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">手表</a> / <a href="#">眼镜</a> / <a href="#">珠宝饰品</a><span
+                            class="iconfont">&#xe50c</span></li>
+                    <li><a href="#">我是</a> / <a href="#">凑数</a> / <a href="#">的</a><span class="iconfont">&#xe50c</span>
+                    </li>
                 </ul>
             </div>
             <!-- 轮播图 -->
@@ -226,7 +238,32 @@
                 </div>
             </div>
             <div class="banner2 fr">
-                2
+                <div class="pic fl">
+                    <!-- 上方标题及滑动条 -->
+                    <div class="pic-title">
+                        <div class="text clearfix">
+                            <span class="fl bg">理想生活上天猫</span>
+                            <span class="fr"><i>1</i>/6</span>
+                        </div>
+                        <!-- 标题线 -->
+                        <div class="line">
+                            <span></span>
+                        </div>
+                    </div>
+                    <!-- 组合轮播图 -->
+                    <div class="img-box">
+                        <a href="#"><img src="./images/pic_02.jpg" alt=""></a>
+                        <a href="#"><img src="./images/pic_03.jpg" alt=""></a>
+                    </div>
+                    <!-- 切换按钮 -->
+                    <button class="iconfont l-btn">&#xe50c</button>
+                    <button class="iconfont r-btn">&#xe50a</button>
+                </div>
+                <!-- 右侧广告 -->
+                <div class="ad fr">
+                    <p class="title">今日特卖</p>
+                    <a href="#"><img src="./images/ad_03.jpg" alt=""></a>
+                </div>
             </div>
 
             <!-- 淘宝头条 -->
