淘宝头条相关

--- a/淘宝静态页面.html
+++ b/淘宝静态页面.html
@@ -183,6 +183,7 @@
     <div id="first-screen" class="layer clearfix">
         <!-- 左板块 -->
         <div class="first-left fl">
+
             <!-- 左侧导航 -->
             <div class="left-nav fl">
                 <ul>
@@ -216,6 +217,7 @@
                     </li>
                 </ul>
             </div>
+
             <!-- 轮播图 -->
             <div class="banner1 fr">
                 <div class="pic fl">
@@ -267,8 +269,23 @@
             </div>
 
             <!-- 淘宝头条 -->
-            <div class="news fl"></div>
+            <div class="news fl">
+                <div class="head fl">
+                    <h3>淘宝头条</h3>
+                    <p>让你的生活更有趣</p>
+                </div>
+
+                <div class="new-list fr">
+                    <div class="item">
+                        <a href="#" class="img fl"><img src="./images/news_img_01.jpg" alt=""></a>
+                        <h4><a href="#">微漫酱访谈第三期：超萌舞见弥音音</a></h4>
+                        <p><a href="#">哈喽，大家好，我是你们可爱的微漫酱，今天我们请到了一位舞见小姐姐来做客我们的访谈室，她就是弥音音！</a></p>
+                        <a href="#" class="more">更多></a>
+                    </div>
+                </div>
+            </div>
         </div>
+
         <!-- 右板块 -->
         <div class="first-right fr">
 
