--- a/淘宝静态页面.html
+++ b/淘宝静态页面.html
@@ -7,7 +7,7 @@
     <title>淘宝网 - 淘！我喜欢</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/muster.css">
-    <base href="">
+    <!-- <base href="target：_blank"> -->
 </head>
 
 
@@ -288,6 +288,40 @@
 
         <!-- 右板块 -->
         <div class="first-right fr">
+            <!-- 用户 -->
+            <div class="user">
+                <!-- 头像 -->
+                <a href="#" class="avatar">
+                    <img src="./images/avatar.jpg" alt="">
+                </a>
+                <!-- 用户名 -->
+                <p class="username">Hi！你好</p>
+                <p class="members">
+                    <a href="#" class="gold">领淘金币抵钱</a>
+                    <a href="#" class="club">会员俱乐部</a>
+                </p>
+                <div class="btn">
+                    <button class="login">登录</button>
+                    <button class="register">注册</button>
+                    <button class="shop">开店</button>
+                </div>
+            </div>
+            <!-- 举报 -->
+            <a href="#" class="tip-off">
+                <span>网上有害信息举报专区<i class="iconfont">&#xe644</i></span>
+            </a>
+
+            <!-- 公告区 -->
+            <div class="notice"></div>
+
+            <!-- 图标区 -->
+            <table class="icon">
+
+            </table>
+
+            <!-- 阿里app -->
+            <div class="app"></div>
+
 
         </div>
     </div>
