--- a/淘宝静态页面.html
+++ b/淘宝静态页面.html
@@ -312,7 +312,21 @@
             </a>
 
             <!-- 公告区 -->
-            <div class="notice"></div>
+            <div class="notice">
+                <ul class="title">
+                    <li class="active"><a href="#">公告</a></li>
+                    <li><a href="#">规则</a></li>
+                    <li><a href="#">论坛</a></li>
+                    <li><a href="#">安全</a></li>
+                    <li><a href="#">公益</a></li>
+                </ul>
+                <ul class="content clearfix">
+                    <li class="item1"><a href="#">关于开展打击网络“有偿删帖”和“软色情”专项</a></li>
+                    <li><a href="#">魔豆妈妈公益项目</a></li>
+                    <li><a href="#">让母爱永不打烊！</a></li>
+                </ul>
+
+            </div>
 
             <!-- 图标区 -->
             <table class="icon">
