--- a/淘宝静态页面.html
+++ b/淘宝静态页面.html
@@ -330,6 +330,82 @@
 
             <!-- 图标区 -->
             <table class="icon">
+                <tr>
+                    <td class="item1">
+                        <a href="#">
+                            <span>icon</span>
+                            <i>充话费</i>
+                        </a>
+                    </td>
+                    <td class="item2">
+                        <a href="#">
+                            <span>icon</span>
+                            <i>旅行</i>
+                        </a>
+                    </td>
+                    <td class="item3">
+                        <a href="#">
+                            <span>icon</span>
+                            <i>车险</i>
+                        </a>
+                    </td>
+                    <td class="item4">
+                        <a href="#">
+                            <span>icon</span>
+                            <i>游戏</i>
+                        </a>
+                    </td>
+                </tr>
+                <td class="item5">
+                    <a href="#">
+                        <span>icon</span>
+                        <i>彩票</i>
+                    </a>
+                </td>
+                <td class="item6">
+                    <a href="#">
+                        <span>icon</span>
+                        <i>电影</i>
+                    </a>
+                </td>
+                <td class="item7">
+                    <a href="#">
+                        <span>icon</span>
+                        <i>酒店</i>
+                    </a>
+                </td>
+                <td class="item8">
+                    <a href="#">
+                        <span>icon</span>
+                        <i>理财</i>
+                    </a>
+                </td>
+                </tr>
+                <td class="item9">
+                    <a href="#">
+                        <span>icon</span>
+                        <i>找服务</i>
+                    </a>
+                </td>
+                <td class="item10">
+                    <a href="#">
+                        <span>icon</span>
+                        <i>演出</i>
+                    </a>
+                </td>
+                <td class="item11">
+                    <a href="#">
+                        <span>icon</span>
+                        <i>水电煤</i>
+                    </a>
+                </td>
+                <td class="item12">
+                    <a href="#">
+                        <span>icon</span>
+                        <i>火车票</i>
+                    </a>
+                </td>
+                </tr>
 
             </table>
 
