--- a/淘宝静态页面.html
+++ b/淘宝静态页面.html
@@ -410,9 +410,44 @@
             </table>
 
             <!-- 阿里app -->
-            <div class="app"></div>
-
-
+            <div class="app">
+                <div class="app-title clearfix">
+                    <h3 class="fl">阿里APP</h3>
+                    <a href="#" class="fr">更多></a>
+                </div>
+                <ul class="app-icon">
+                    <li>
+                        <a href="#"><img src="./images/app_01.webp" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./images/app_02.webp" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./images/app_03.webp" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./images/app_04.webp" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./images/app_05.webp" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./images/app_06.webp" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./images/app_07.webp" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./images/app_08.webp" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./images/app_09.webp" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./images/app_10.webp" alt=""></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 
