有好货爱逛街结构完结

--- a/淘宝静态页面.html
+++ b/淘宝静态页面.html
@@ -452,13 +452,148 @@
     </div>
 
     <!-- 有好货 与 爱逛街 板块 -->
-    <div id="second-screen">
+    <div id="second-screen" class="layer clearfix mt-10">
+        <!-- 有好货 -->
+        <div class="goods fl">
+            <div class="head clearfix">
+                <h3 class="fl">
+                    <img src="./images/goods.png" alt="有好货">
+                    <span class="iconfont">&#xe628</span>
+                    <i>与品质生活不期而遇</i>
+                </h3>
+                <a href="#" class="fr change">换一换</a>
+            </div>
+            <ul class="list">
+                <li>
+                    <a href="#"><img src="./images/shop_img_01.jpg" alt=""></a>
+                    <h4><a href="#">max破产都要买的口红</a></h4>
+                    <p class="text"><a href="#">我是测试，忽略内容</a></p>
+                    <a href="#" class="comment">
+                        <span class="iconfont">&#xe7fa</span><i>1234人说好</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/shop_img_02.jpg" alt=""></a>
+                    <h4><a href="#">pro破产都要买的手镯</a></h4>
+                    <p class="text"><a href="#">我是测试，忽略内容</a></p>
+                    <a href="#" class="comment">
+                        <span class="iconfont">&#xe7fa</span><i>5678人说好</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/shop_img_03.jpg" alt=""></a>
+                    <h4><a href="#">air破产都要买的海绵</a></h4>
+                    <p class="text"><a href="#">我是测试，忽略内容</a></p>
+                    <a href="#" class="comment">
+                        <span class="iconfont">&#xe7fa</span><i>91011人说好</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/shop_img_04.jpg" alt=""></a>
+                    <h4><a href="#">mac破产都要买的减脂器</a></h4>
+                    <p class="text"><a href="#">我是测试，忽略内容</a></p>
+                    <a href="#" class="comment">
+                        <span class="iconfont">&#xe7fa</span><i>9876人说好</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/shop_img_05.jpg" alt=""></a>
+                    <h4><a href="#">牛肉酱破产都要买的钻石</a></h4>
+                    <p class="text"><a href="#">我是测试，忽略内容</a></p>
+                    <a href="#" class="comment">
+                        <span class="iconfont">&#xe7fa</span><i>5432人说好</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/shop_img_06.jpg" alt=""></a>
+                    <h4><a href="#">路由器挤破脑袋都要买的房子</a></h4>
+                    <p class="text"><a href="#">我是测试，忽略内容</a></p>
+                    <a href="#" class="comment">
+                        <span class="iconfont">&#xe7fa</span><i>12345人说好</i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <!-- 爱逛街 -->
+        <div class="goods fr shopping">
+            <div class="head clearfix">
+                <h3 class="fl">
+                    <img src="./images/shopping.png" alt="有好货">
+                    <span class="iconfont">&#xe628</span>
+                    <i>献给聪明可爱的你</i>
+                </h3>
+                <a href="#" class="fr change">换一换</a>
+            </div>
+            <ul class="list">
+                <li>
+                    <a href="#"><img src="./images/shop_img_07.jpg" alt=""></a>
+                    <p class="text">
+                        <span class="iconfont">&#xe66b</span>
+                        <a href="#">我是测试，内容比上一个长一点，因为我想换行</a>
+                    </p>
+                    <a href="#" class="comment">
+                        <span><img src="./images/small_avatar.png" alt=""></span><i>爱逛***01</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/shop_img_08.jpg" alt=""></a>
+                    <p class="text">
+                        <span class="iconfont">&#xe66b</span>
+                        <a href="#">我是测试，内容比上一个长一点，因为我想换行</a>
+                    </p>
+                    <a href="#" class="comment">
+                        <span><img src="./images/small_avatar.png" alt=""></span><i>爱逛***01</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/shop_img_09.jpg" alt=""></a>
+                    <p class="text">
+                        <span class="iconfont">&#xe66b</span>
+                        <a href="#">我是测试，内容比上一个长一点，因为我想换行</a>
+                    </p>
+                    <a href="#" class="comment">
+                        <span><img src="./images/small_avatar.png" alt=""></span><i>爱逛***01</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/shop_img_10.jpg" alt=""></a>
+                    <p class="text">
+                        <span class="iconfont">&#xe66b</span>
+                        <a href="#">我是测试，内容比上一个长一点，因为我想换行</a>
+                    </p>
+                    <a href="#" class="comment">
+                        <span><img src="./images/small_avatar.png" alt=""></span><i>爱逛***01</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/shop_img_11.jpg" alt=""></a>
+                    <p class="text">
+                        <span class="iconfont">&#xe66b</span>
+                        <a href="#">我是测试，内容比上一个长一点，因为我想换行</a>
+                    </p>
+                    <a href="#" class="comment">
+                        <span><img src="./images/small_avatar.png" alt=""></span><i>爱逛***01</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/shop_img_12.jpg" alt=""></a>
+                    <p class="text">
+                        <span class="iconfont">&#xe66b</span>
+                        <a href="#">我是测试，内容比上一个长一点，因为我想换行</a>
+                    </p>
+                    <a href="#" class="comment">
+                        <span><img src="./images/small_avatar.png" alt=""></span><i>爱逛***01</i>
+                    </a>
+                </li>
+            </ul>
+        </div>
 
     </div>
 
     <!-- 右侧固定定位导航 -->
     <div id="right-fixed-nav">
-
+        
     </div>
 
 
