--- a/淘宝静态页面.html
+++ b/淘宝静态页面.html
@@ -593,7 +593,16 @@
 
     <!-- 右侧固定定位导航 -->
     <div id="right-fixed-nav">
-        
+        <span class="iconfont">&#xe605</span>
+        <div class="btn">
+            <a href="#" class="c4 active">爱逛 好货</a>
+            <a href="#" class="c5">好店 直播</a>
+            <a href="#" class="c6">品质 特色</a>
+            <a href="#" class="c7">实惠 特卖</a>
+            <a href="#" class="c4">猜你 喜欢</a>
+            <a href="#" class="item6">反馈</a>
+            <a href="#" class="itme7">暴恐 举报</a>
+        </div>
     </div>
 
 
